chore: update dependencies (#314)

--- a/tools/generators/connected/connected.vue.hbs
+++ b/tools/generators/connected/connected.vue.hbs
@@ -8,7 +8,7 @@
 
         <vue-grid-item fill>
           <vue-button
-            variant="secondary"
+            color="secondary"
             :loading="incrementPending"
             @click='increment'>Increment +1
           </vue-button>
@@ -17,7 +17,7 @@
         </vue-grid-item>
         <vue-grid-item fill>
           <vue-button
-            variant="primary"
+            color="primary"
             :loading="decrementPending"
             @click='decrement'>Decrement -1
           </vue-button>
