refactor(components): remove unused default props

--- a/src/app/shared/styles/variables/_card.scss
+++ b/src/app/shared/styles/variables/_card.scss
@@ -18,4 +18,4 @@ $card-body-padding: $space-unit $space-unit * 2;
 $card-body-font-size: inherit;
 $card-body-color: $text-color;
 
-$card-footer-padding: $space-unit $space-unit * 2;
+$card-footer-padding: $space-unit;
