--- a/src/app/shared/designSystem/variables/_checkbox.scss
+++ b/src/app/shared/designSystem/variables/_checkbox.scss
@@ -1,10 +1,10 @@
-$checkbox-color: $text-color;
+$checkbox-color: $brand-text-color;
 $checkbox-padding: 0;
 $checkbox-margin: 0 0 $space-unit * 2 0;
 $checkbox-size: $space-unit * 3;
-$checkbox-bg: $bg-color;
+$checkbox-bg: $brand-bg-color;
 $checkbox-border: 1px solid $brand-secondary;
-$checkbox-transition: background $transition-duration cubic-bezier(0, 0.84, 0.83, 0.67);
+$checkbox-transition: background $brand-transition-duration cubic-bezier(0, 0.84, 0.83, 0.67);
 $checkbox-check: 2px solid #fff;
 $checkbox-check-margin: 0 $space-unit * 2 0 0;
 $checkbox-checked-bg: $brand-secondary;
