--- a/src/app/shared/designSystem/variables/_pagination.scss
+++ b/src/app/shared/designSystem/variables/_pagination.scss
@@ -3,8 +3,8 @@ $pagination-padding: 0;
 $pagination-label-padding: $space-unit $space-unit * 2;
 $pagination-label-min-width: $space-unit * 10;
 $pagination-button-size: $space-unit * 5;
-$pagination-button-bg: $bg-color-variant;
+$pagination-button-bg: $brand-bg-color-variant;
 $pagination-button-shadow: none;
-$pagination-button-border: 1px solid $border-color;
+$pagination-button-border: 1px solid $brand-border-color;
 $pagination-arrow-color: $brand-secondary;
-$pagination-arrow-disabled-color: $bg-color;
+$pagination-arrow-disabled-color: $brand-bg-color;
