--- a/src/app/shared/designSystem/variables/_autocomplete.scss
+++ b/src/app/shared/designSystem/variables/_autocomplete.scss
@@ -1,10 +1,10 @@
-$autocomplete-bg: $bg-color;
+$autocomplete-bg: $brand-bg-color;
 $autocomplete-padding: 0;
 $autocomplete-margin: -($space-unit * 3) 0 0 0;
 $autocomplete-shadow: none;
-$autocomplete-border: 1px solid $border-color;
+$autocomplete-border: 1px solid $brand-border-color;
 
 $autocomplete-item-padding: $space-unit $space-unit * 2;
-$autocomplete-item-border: 1px solid $border-color;
-$autocomplete-item-selected-bg: $bg-color-variant;
-$autocomplete-item-selected-color: $text-color;
+$autocomplete-item-border: 1px solid $brand-border-color;
+$autocomplete-item-selected-bg: $brand-bg-color-variant;
+$autocomplete-item-selected-color: $brand-text-color;
