--- a/src/app/shared/designSystem/variables/_brand.scss
+++ b/src/app/shared/designSystem/variables/_brand.scss
@@ -1,6 +1,15 @@
 /* General */
 $space-unit: 0.8rem;
 
+/* Spacing */
+$space-4: $space-unit * 0.5;
+$space-8: $space-unit;
+$space-16: $space-unit * 2;
+$space-24: $space-unit * 3;
+$space-32: $space-unit * 4;
+$space-48: $space-unit * 6;
+$space-64: $space-unit * 8;
+
 /* Palette */
 $primary-1-1: #2b3a42;
 $primary-1-2: #525e65;
@@ -95,27 +104,27 @@ $brand-warning: $tertiary-2-1;
 $brand-success: $tertiary-3-1;
 
 /* Background Colors */
-$bg-color: $tertiary-4;
-$bg-color-variant: $primary-1-6;
-$bg-color-inverse: $tertiary-5;
-$bg-color-variant-inverse: $primary-1-3;
+$brand-bg-color: $tertiary-4;
+$brand-bg-color-variant: $primary-1-6;
+$brand-bg-color-inverse: $tertiary-5;
+$brand-bg-color-variant-inverse: $primary-1-3;
 
 /* Text Colors */
-$text-color: $tertiary-5;
-$text-secondary-color: $primary-1-1;
-$text-color-inverse: $tertiary-4;
-$text-secondary-color-inverse: $primary-1-6;
+$brand-text-color: $tertiary-5;
+$brand-text-secondary-color: $primary-1-1;
+$brand-text-color-inverse: $tertiary-4;
+$brand-text-secondary-color-inverse: $primary-1-6;
 
 /* Links */
-$link-color: $secondary-1-1;
-$link-hover-color: darken($link-color, 5%);
+$brand-link-color: $secondary-1-1;
+$brand-link-hover-color: darken($brand-link-color, 5%);
 
 /* Borders */
-$border-color: $primary-1-5;
-$border-color-inverse: $primary-1-2;
-$border-radius: $space-unit * 0.5;
+$brand-border-color: $primary-1-5;
+$brand-border-color-inverse: $primary-1-2;
+$brand-border-radius: $space-unit * 0.5;
 
 /* Animation Language */
-$transition-duration: 250ms;
-$easing-curve: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-$fade-animation-transition: opacity $transition-duration * 4 $easing-curve;
+$brand-transition-duration: 250ms;
+$brand-easing-curve: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+$brand-fade-animation-transition: opacity $brand-transition-duration * 4 $brand-easing-curve;
