--- a/src/app/shared/designSystem/variables/_data-table.scss
+++ b/src/app/shared/designSystem/variables/_data-table.scss
@@ -1,11 +1,11 @@
 $data-table-width: 100%;
-$data-table-no-results-border: 1px solid $border-color;
+$data-table-no-results-border: 1px solid $brand-border-color;
 $data-table-no-results-padding: $space-unit * 8 0;
 $data-table-no-results-opacity: 0.5;
 $data-table-min-width: 600px;
 
-$data-table-header-border: 1px solid $border-color;
-$data-table-header-bg: $bg-color;
+$data-table-header-border: 1px solid $brand-border-color;
+$data-table-header-bg: $brand-bg-color;
 $data-table-header-font-weight: $font-weight-medium;
 $data-table-header-column-padding: $space-unit $space-unit * 2;
 $data-table-header-icon-color: inherit;
@@ -14,7 +14,7 @@ $data-table-header-icon-opacity: 0.3;
 $data-table-header-icon-margin: 0;
 
 $data-table-row-border: $data-table-no-results-border;
-$data-table-row-hover-bg: $bg-color-variant;
-$data-table-row-hover-color: $text-color;
+$data-table-row-hover-bg: $brand-bg-color-variant;
+$data-table-row-hover-color: $brand-text-color;
 
 $data-table-row-column-padding: $space-unit $space-unit * 2;
