--- a/src/app/shared/designSystem/variables/_footer.scss
+++ b/src/app/shared/designSystem/variables/_footer.scss
@@ -1,6 +1,6 @@
 $footer-padding: $space-unit * 2 0 $space-unit * 2 0;
-$footer-bg: $bg-color-inverse;
-$footer-color: $text-color-inverse;
-$footer-link-color: $text-color-inverse;
+$footer-bg: $brand-bg-color-inverse;
+$footer-color: $brand-text-color-inverse;
+$footer-link-color: $brand-text-color-inverse;
 $footer-link-hover-color: darken($footer-link-color, 5%);
 $footer-link-font-weight: $link-font-weight;
