--- a/src/app/shared/designSystem/variables/_select.scss
+++ b/src/app/shared/designSystem/variables/_select.scss
@@ -1,9 +1,9 @@
-$select-bg: $bg-color-variant;
+$select-bg: $brand-bg-color-variant;
 $select-shadow: none;
 $select-margin: 0;
 $select-padding: $space-unit $space-unit * 2;
-$select-border: 1px solid $border-color;
-$select-color: $text-color;
+$select-border: 1px solid $brand-border-color;
+$select-color: $brand-text-color;
 $select-font-size: inherit;
 $select-arrow-color: $brand-primary;
 
