--- a/src/app/shared/designSystem/variables/_sidebar.scss
+++ b/src/app/shared/designSystem/variables/_sidebar.scss
@@ -1,23 +1,23 @@
 $sidebar-index: 2002;
 $sidebar-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-$sidebar-bg: $bg-color;
-$sidebar-color: $text-color;
+$sidebar-bg: $brand-bg-color;
+$sidebar-color: $brand-text-color;
 $sidebar-max-width: 80%;
 $sidebar-padding: $space-unit * 2;
 $sidebar-margin: $space-unit * 8 0 0 0;
-$sidebar-transition: transform $transition-duration ease-in-out;
+$sidebar-transition: transform $brand-transition-duration ease-in-out;
 $sidebar-width: 300px;
 $sidebar-height: calc(100% - #{$space-unit * 8});
 $sidebar-hamburger-bg: $brand-primary;
-$sidebar-hamburger-color: $text-color-inverse;
+$sidebar-hamburger-color: $brand-text-color-inverse;
 
 $sidebar-group-margin: 0 0 $space-unit * 6 0;
 $sidebar-group-font-weight: $font-weight-medium;
 $sidebar-group-font-size: $font-size;
-$sidebar-group-border-bottom: 1px solid $border-color;
+$sidebar-group-border-bottom: 1px solid $brand-border-color;
 
 $sidebar-group-item-font-weight: $font-weight-regular;
 $sidebar-group-item-font-size: $font-size;
-$sidebar-group-item-color: $text-color;
-$sidebar-group-item-hover-color: $text-color;
-$sidebar-group-item-hover-bg: $bg-color-variant;
+$sidebar-group-item-color: $brand-text-color;
+$sidebar-group-item-hover-color: $brand-text-color;
+$sidebar-group-item-hover-bg: $brand-bg-color-variant;
