--- a/src/app/shared/designSystem/variables/_tab-group.scss
+++ b/src/app/shared/designSystem/variables/_tab-group.scss
@@ -1,13 +1,13 @@
-$tab-group-bg: $bg-color-variant;
+$tab-group-bg: $brand-bg-color-variant;
 $tab-group-shadow: none;
-$tab-group-border: 1px solid $border-color;
+$tab-group-border: 1px solid $brand-border-color;
 $tab-group-padding: $space-unit $space-unit * 2;
 $tab-group-margin: $space-unit * 4 0 0 0;
 
-$tab-group-header-bg: $bg-color;
-$tab-group-header-bg: $bg-color;
+$tab-group-header-bg: $brand-bg-color;
+$tab-group-header-bg: $brand-bg-color;
 $tab-group-header-item-padding: $space-unit $space-unit * 2;
-$tab-group-header-item-hover-bg: $bg-color-variant;
-$tab-group-header-item-hover-color: $text-color;
+$tab-group-header-item-hover-bg: $brand-bg-color-variant;
+$tab-group-header-item-hover-color: $brand-text-color;
 
-$tab-item-transition: transform $transition-duration linear;
+$tab-item-transition: transform $brand-transition-duration linear;
