--- a/src/app/shared/designSystem/variables/_toggle.scss
+++ b/src/app/shared/designSystem/variables/_toggle.scss
@@ -1,10 +1,10 @@
-$toggle-bg: $bg-color-variant;
+$toggle-bg: $brand-bg-color-variant;
 $toggle-margin: 0 0 $space-unit * 2 0;
 $toggle-shadow: none;
-$toggle-border-radius: $border-radius;
+$toggle-border-radius: $brand-border-radius;
 $toggle-width: $space-unit * 6;
 $toggle-height: $space-unit * 1.5;
-$toggle-transition: all $transition-duration ease-in-out;
+$toggle-transition: all $brand-transition-duration ease-in-out;
 
 $toggle-handle-border-radius: 50%;
 $toggle-handle-size: $space-unit * 3;
@@ -14,5 +14,5 @@ $toggle-handle-checked-bg: $brand-secondary;
 $toggle-handle-focused-shadow: 0 0 0 8px
   rgba(red($brand-secondary), green($brand-secondary), blue($brand-secondary), 0.5);
 
-$toggle-disabled-bg: $bg-color-variant;
-$toggle-handle-disabled-bg: $border-color;
+$toggle-disabled-bg: $brand-bg-color-variant;
+$toggle-handle-disabled-bg: $brand-border-color;
