--- a/.vue-starter/generators/module/actions.spec.ts.hbs
+++ b/.vue-starter/generators/module/actions.spec.ts.hbs
@@ -1,9 +1,9 @@
-import MockAdapter from 'axios-mock-adapter';
-import { HttpService } from '@/app/shared/services/HttpService/HttpService';
 import { ActionContext, Commit, Dispatch } from 'vuex';
-import { {{ properCase moduleName }}Actions } from './actions';
+import MockAdapter from 'axios-mock-adapter';
 import { {{ properCase moduleName }}DefaultState, I{{ properCase moduleName }}State } from './state';
 import { IState } from '@/app/state';
+import { {{ properCase moduleName }}Actions } from './actions';
+import { HttpService } from '@/app/shared/services/HttpService/HttpService';
 
 describe('{{ properCase moduleName }}Actions', () => {
   let testContext: ActionContext<I{{ properCase moduleName }}State, IState>;
@@ -12,77 +12,60 @@ describe('{{ properCase moduleName }}Actions', () => {
   beforeEach(() => {
     testContext = {
       dispatch: jest.fn() as Dispatch,
-      commit:   jest.fn() as Commit,
-      state:    {{ properCase moduleName }}DefaultState(),
+      commit: jest.fn() as Commit,
+      state: {{ properCase moduleName }}DefaultState(),
     } as ActionContext<I{{ properCase moduleName }}State, IState>;
 
     mockAxios = new MockAdapter(HttpService);
   });
 
-  test('it should call INCREMENT action on success', (done) => {
+  test('it should call INCREMENT action on success', async () => {
     const commitMock: jest.Mock = testContext.commit as jest.Mock;
 
-    mockAxios
-    .onPut('/counter/increment')
-    .reply(200, { count: 1337 });
+    mockAxios.onPut('/counter/increment').reply(200, { count: 1337 });
 
-    {{ properCase moduleName }}Actions
-    .increment(testContext)
-    .then(() => {
-      expect(commitMock.mock.calls[0]).toEqual(['SET_INCREMENT_PENDING', true]);
-      expect(commitMock.mock.calls[1]).toEqual(['SET_COUNT', 1337]);
-      expect(commitMock.mock.calls[2]).toEqual(['SET_INCREMENT_PENDING', false]);
-      done();
-    });
+    await {{ properCase moduleName }}Actions.increment(testContext);
+
+    expect(commitMock.mock.calls[0]).toEqual(['SET_INCREMENT_PENDING', true]);
+    expect(commitMock.mock.calls[1]).toEqual(['SET_COUNT', 1337]);
+    expect(commitMock.mock.calls[2]).toEqual(['SET_INCREMENT_PENDING', false]);
   });
 
-  test('it should set INCREMENT pending to false on fail', (done) => {
+  test('it should set INCREMENT pending to false on fail', async () => {
     const commitMock: jest.Mock = testContext.commit as jest.Mock;
 
-    mockAxios
-    .onPut('/counter/increment')
-    .reply(500);
+    mockAxios.onPut('/counter/increment').reply(500);
 
-    {{ properCase moduleName }}Actions
-    .increment(testContext)
-    .then(() => {
+    try {
+      await {{ properCase moduleName }}Actions.increment(testContext);
+    } catch (e) {
       expect(commitMock.mock.calls[0]).toEqual(['SET_INCREMENT_PENDING', true]);
       expect(commitMock.mock.calls[1]).toEqual(['SET_INCREMENT_PENDING', false]);
-      done();
-    });
+    }
   });
 
-  test('it should call DECREMENT action on success', (done) => {
+  test('it should call DECREMENT action on success', async () => {
     const commitMock: jest.Mock = testContext.commit as jest.Mock;
 
-    mockAxios
-    .onPut('/counter/decrement')
-    .reply(200, { count: 1337 });
+    mockAxios.onPut('/counter/decrement').reply(200, { count: 1337 });
 
-    {{ properCase moduleName }}Actions
-    .decrement(testContext)
-    .then(() => {
-      expect(commitMock.mock.calls[0]).toEqual(['SET_DECREMENT_PENDING', true]);
-      expect(commitMock.mock.calls[1]).toEqual(['SET_COUNT', 1337]);
-      expect(commitMock.mock.calls[2]).toEqual(['SET_DECREMENT_PENDING', false]);
-      done();
-    });
+    await {{ properCase moduleName }}Actions.decrement(testContext);
+
+    expect(commitMock.mock.calls[0]).toEqual(['SET_DECREMENT_PENDING', true]);
+    expect(commitMock.mock.calls[1]).toEqual(['SET_COUNT', 1337]);
+    expect(commitMock.mock.calls[2]).toEqual(['SET_DECREMENT_PENDING', false]);
   });
 
-  test('it should set DECREMENT pending to false on fail', (done) => {
+  test('it should set DECREMENT pending to false on fail', async () => {
     const commitMock: jest.Mock = testContext.commit as jest.Mock;
 
-    mockAxios
-    .onPut('/counter/decrement')
-    .reply(500);
+    mockAxios.onPut('/counter/decrement').reply(500);
 
-    {{ properCase moduleName }}Actions
-    .decrement(testContext)
-    .then(() => {
+    try {
+      await {{ properCase moduleName }}Actions.decrement(testContext);
+    } catch (e) {
       expect(commitMock.mock.calls[0]).toEqual(['SET_DECREMENT_PENDING', true]);
       expect(commitMock.mock.calls[1]).toEqual(['SET_DECREMENT_PENDING', false]);
-      done();
-    });
+    }
   });
-
 });
