--- a/.vue-starter/generators/module/actions.ts.hbs
+++ b/.vue-starter/generators/module/actions.ts.hbs
@@ -1,8 +1,7 @@
 import { ActionContext } from 'vuex';
 import { I{{ properCase moduleName }}State } from './state';
-import { IState } from '@/app/state';
-import { HttpService } from '@/app/shared/services/HttpService/HttpService';
-import { AxiosResponse } from 'axios';
+import { IState } from '../state';
+import { HttpService } from '../shared/services/HttpService/HttpService';
 
 export interface I{{ properCase moduleName }}Response {
   count: number;
@@ -15,28 +14,30 @@ export interface I{{ properCase moduleName }}Actions {
 }
 
 export const {{ properCase moduleName }}Actions: I{{ properCase moduleName }}Actions = {
-  increment({ commit, state }: ActionContext<I{{ properCase moduleName }}State, IState>): Promise<any> {
+  async increment({ commit, state }: ActionContext<I{{ properCase moduleName }}State, IState>) {
     commit('SET_INCREMENT_PENDING', true);
 
-    return HttpService
-    .put('/counter/increment', { count: state.count })
-    .then((res: AxiosResponse<I{{ properCase moduleName }}Response>) => {
+    try {
+      const res = await HttpService.put<I{{ properCase moduleName }}Response>('/counter/increment', { count: state.count });
+
       commit('SET_COUNT', res.data.count);
       commit('SET_INCREMENT_PENDING', false);
-    })
-    .catch(() => {
+    } catch (e) {
       commit('SET_INCREMENT_PENDING', false);
-    });
+      throw new Error(e);
+    }
   },
-  decrement({ commit, state }: ActionContext<I{{ properCase moduleName }}State, IState>): Promise<any> {
+  async decrement({ commit, state }: ActionContext<I{{ properCase moduleName }}State, IState>) {
     commit('SET_DECREMENT_PENDING', true);
 
-    return HttpService
-    .put('/counter/decrement', { count: state.count })
-    .then((res: AxiosResponse<I{{ properCase moduleName }}Response>) => {
+    try {
+      const res = await HttpService.put<I{{ properCase moduleName }}Response>('/counter/decrement', { count: state.count });
+
       commit('SET_COUNT', res.data.count);
       commit('SET_DECREMENT_PENDING', false);
-    })
-    .catch(() => commit('SET_DECREMENT_PENDING', false));
+    } catch (e) {
+      commit('SET_DECREMENT_PENDING', false);
+      throw new Error(e);
+    }
   },
 };
