--- a/src/app/shared/designSystem/variables/_input.scss
+++ b/src/app/shared/designSystem/variables/_input.scss
@@ -1,7 +1,7 @@
 $input-border-bottom: 1px solid $brand-border-color;
 $input-background-color: transparent;
 $input-padding: $space-unit 0;
-$input-margin: 0;
+$input-margin: 0 0 $space-md 0;
 $input-font-family: $font-family;
 $input-font-size: inherit;
 $input-font-weight: $font-weight-medium;
