--- a/src/app/shared/designSystem/variables/_nav-bar.scss
+++ b/src/app/shared/designSystem/variables/_nav-bar.scss
@@ -1,6 +1,6 @@
 $nav-bar-bg: $brand-primary;
 $nav-bar-color: $brand-tertiary;
 $nav-bar-width: 100%;
-$nav-bar-height: $space-unit * 8;
-$nav-bar-padding: 0;
+$nav-bar-height: $space-xl;
+$nav-bar-padding: $space-sm;
 $nav-bar-index: 1000;
