--- a/src/app/shared/designSystem/variables/_modal.scss
+++ b/src/app/shared/designSystem/variables/_modal.scss
@@ -2,4 +2,5 @@ $modal-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 $modal-padding: $space-unit * 3;
 $modal-index: 2001;
 $modal-bg: $brand-bg-color;
+$modal-min-width: 512px;
 $modal-max-width: 50%;
