--- a/src/app/shared/designSystem/variables/_notification-stack.scss
+++ b/src/app/shared/designSystem/variables/_notification-stack.scss
@@ -3,7 +3,7 @@ $notifications-padding: $space-unit;
 $notifications-max-width: $space-unit * 50;
 
 $notification-padding: $space-unit * 2 $space-unit * 5 $space-unit * 2 $space-unit * 2;
-$notification-margin: 0 0 $space-unit 0;
+$notification-margin: $space-unit 0 $space-unit 0;
 $notification-shadow: none;
 $notification-max-height: $space-unit * 10;
 $notification-close-bg: $brand-bg-color;
