feat(directives): add v-sr-only (#364)

--- a/src/app/shared/designSystem/global.scss
+++ b/src/app/shared/designSystem/global.scss
@@ -6,12 +6,7 @@ body {
   background-color: $brand-bg-color;
 }
 
-// always make sure images have an alt attribute
-img:not([alt]) {
-  border: 5px dashed $brand-danger;
-}
-
-/* vue-icon global style */
+// vue-icon global style
 i {
   display: inline-block;
   height: $font-size;
@@ -28,4 +23,27 @@ i {
   g {
     stroke: currentColor !important;
   }
+}
+
+// UTILITIES
+// =========
+
+// always make sure images have an alt attribute
+img:not([alt]) {
+  border: 5px dashed $brand-danger;
+}
+
+// Only display content to screen readers
+//
+// See: https://a11yproject.com/posts/how-to-hide-content/
+// See: https://hugogiraudel.com/2016/10/13/css-hide-and-seek/
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
