--- a/src/app/shared/designSystem/variables/_input.scss
+++ b/src/app/shared/designSystem/variables/_input.scss
@@ -15,11 +15,11 @@ $input-placeholder-font-size: $input-font-size;
 $input-placeholder-font-weight: $font-weight-medium;
 $input-placeholder-active-font-size: 75%;
 $input-placeholder-active-font-weight: $font-weight-regular;
-$input-placeholder-active-font-color: $secondary-1-100;
+$input-placeholder-active-font-color: $brand-secondary;
 $input-placeholder-active-height: $space-unit * 2;
 
 $input-bar-height: 2px;
-$input-bar-color: $secondary-1-100;
+$input-bar-color: $brand-secondary;
 
 $input-message-height: $space-unit * 3;
 $input-message-padding: 0;
