--- a/src/app/shared/designSystem/variables/_nav-bar.scss
+++ b/src/app/shared/designSystem/variables/_nav-bar.scss
@@ -1,5 +1,5 @@
 $nav-bar-bg: $brand-primary;
-$nav-bar-color: $brand-tertiary;
+$nav-bar-color: $brand-bg-color-inverse;
 $nav-bar-width: 100%;
 $nav-bar-height: $space-xl;
 $nav-bar-padding: $space-sm;
