refactor: re-branding (#383)
related to #317

--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -1,4 +1,5 @@
-$accentColor = #17BEBB
-$textColor = #333
-$borderColor = #EBEBEB
-$codeBgColor = #333
+$accentColor = #f43b6c
+$textColor = #010b0a
+$borderColor = #d9dada
+$codeBgColor = #010b0a
+$arrowBgColor = #f43b6c
