--- a/src/app/shared/designSystem/variables/_color-palette.scss
+++ b/src/app/shared/designSystem/variables/_color-palette.scss
@@ -1,9 +1,9 @@
 $palette-colors: (
-  'wine': #503a66,
-  'sea': #0080ab,
-  'green': #80ab00,
-  'yellow': #edab28,
-  'red': #ab000b,
+  'coral': #f43b6c,
+  'sea': #4281d7,
+  'green': #00b84a,
+  'yellow': #ffaa00,
+  'red': #f10026,
   'black': #010b0a,
 );
 
