--- a/src/app/shared/designSystem/variables/_select.scss
+++ b/src/app/shared/designSystem/variables/_select.scss
@@ -5,7 +5,7 @@ $select-padding: $space-8 $space-12;
 $select-border: 1px solid $brand-border-color;
 $select-color: $brand-text-color;
 $select-font-size: inherit;
-$select-arrow-color: $brand-primary;
+$select-arrow-color: $brand-secondary;
 
 $select-multi-max-height: $space-84;
 $select-multi-option-padding: $space-4 0;
