--- a/src/app/shared/designSystem/variables/_sidebar.scss
+++ b/src/app/shared/designSystem/variables/_sidebar.scss
@@ -9,7 +9,7 @@ $sidebar-transition: transform $brand-transition-duration ease-in-out;
 $sidebar-width: 300px;
 $sidebar-height: 100%;
 $sidebar-hamburger-bg: transparent;
-$sidebar-hamburger-color: $brand-text-color-inverse;
+$sidebar-hamburger-color: $brand-text-color;
 $sidebar-hamburger-open-bg: transparent;
 $sidebar-hamburger-open-color: $brand-text-color;
 
