--- a/.vuesion/generators/component/component.stories.ts.hbs
+++ b/.vuesion/generators/component/component.stories.ts.hbs
@@ -1,12 +1,13 @@
 import { storiesOf } from '@storybook/vue';
-import VueInfoAddon from 'storybook-addon-vue-info';
+import { withInfo } from 'storybook-addon-vue-info';
 import {{ properCase componentName }} from './{{ properCase componentName }}.vue';
 
 const story = (storiesOf('{{ properCase componentName }}', module) as any);
 
-story.addDecorator(VueInfoAddon);
-
-story.add('Default', () => ({
-  components: { {{ properCase componentName }} },
-  template:   `<{{ camelCase componentName }}>{{ properCase componentName }}</{{ camelCase componentName }}>`,
-}));
+story.add(
+  'Default',
+  withInfo({})(() => ({
+    components: { {{ properCase componentName }} },
+    template:   `<{{ camelCase componentName }}>{{ properCase componentName }}</{{ camelCase componentName }}>`,
+  }))
+);
