refactor: accessibility iteration (#388)

--- a/src/app/shared/designSystem/variables/_accordion.scss
+++ b/src/app/shared/designSystem/variables/_accordion.scss
@@ -2,5 +2,5 @@ $accordion-item-header-bg: $brand-bg-color-variant;
 $accordion-item-header-shadow: none;
 $accordion-item-header-padding: $space-8 $space-12;
 $accordion-item-header-border: 1px solid $brand-border-color;
-$accordion-item-header-arrow-color: $brand-primary;
+$accordion-item-header-arrow-color: $brand-secondary;
 $accordion-item-body-padding: $accordion-item-header-padding;
