--- a/src/app/shared/designSystem/variables/_color-palette.scss
+++ b/src/app/shared/designSystem/variables/_color-palette.scss
@@ -1,10 +1,10 @@
 $palette-colors: (
   'coral': #f43b6c,
-  'sea': #4281d7,
-  'green': #00b84a,
-  'yellow': #ffaa00,
-  'red': #f10026,
-  'black': #010b0a,
+  'blue': #063cbe,
+  'green': #0ca75f,
+  'yellow': #f3c811,
+  'red': #e84606,
+  'black': #17181c,
 );
 
 @function palette-color($key) {
