--- a/src/app/shared/designSystem/variables/_calendar.scss
+++ b/src/app/shared/designSystem/variables/_calendar.scss
@@ -3,7 +3,7 @@ $calendar-shadow: none;
 $calendar-bg: $brand-bg-color;
 $calendar-margin: 0;
 
-$calendar-header-color: $brand-text-color-inverse;
+$calendar-header-color: foreground-color($brand-primary);
 $calendar-header-padding: $space-12 $space-24;
 $calendar-header-bg: $brand-primary;
 $calendar-header-text-shadow: 0 2px 5px rgba(0, 0, 0, 0.33);
@@ -11,7 +11,7 @@ $calendar-header-text-shadow: 0 2px 5px rgba(0, 0, 0, 0.33);
 $calendar-body-border: 1px solid $brand-border-color;
 $calendar-body-padding: $space-8 $space-12;
 
-$calendar-arrow-color: $brand-secondary;
+$calendar-arrow-color: foreground-color($calendar-bg);
 $calendar-arrow-bg: $calendar-bg;
 $calendar-arrow-hover-bg: $brand-bg-color-variant;
 
@@ -19,9 +19,9 @@ $calendar-day-border-radius: 0;
 $calendar-day-hover: $brand-bg-color-variant;
 
 $calendar-current-day-bg: $brand-primary;
-$calendar-current-day-color: $brand-text-color-inverse;
+$calendar-current-day-color: foreground-color($brand-primary);
 $calendar-current-day-font-weight: $font-weight-medium;
 
 $calendar-selected-day-bg: $brand-secondary;
-$calendar-selected-day-color: $brand-text-color;
+$calendar-selected-day-color: foreground-color($brand-secondary);
 $calendar-selected-day-font-weight: $font-weight-medium;
